<resources>
    <string name="app_name">LW_ME202</string>
    <string name="BMService_desc">BLE interface with SmartBike</string>

    <string name="loginNameLabel_text">Username: </string>
    <string name="loginNameDefault_text">Enter Username Here</string>
    <string name="loginPWLabel_text">Password: </string>
    <string name="loginPWDefault_text">Enter Login Password Here</string>
    <string name="loginButton_text">Submit</string>
    <string name="registerButton_text">Register New User</string>
    <string name="loginIncorrectLabel_text"> </string>
    <string name="incorrectWarning_text">Incorrect Login</string>

    <string name="registerNameDefault_text">Enter New Username</string>
    <string name="registerPWDefault_text">Enter New Password</string>
    <string name="registerDialogTitle_text">User Registration</string>
    <string name="registerGoodToast_text">User successfully registered</string>
    <string name="registerBadToast_text">Please enter a Username and Password</string>
    <string name="registerEnter_text">Register</string>
    <string name="registerCancel_text">Cancel</string>

    <string name="unlockButton_text">Unlock Bike</string>
    <string name="connStatus_text">No Connection</string>
    <string name="bikeConnected_text">Bike Connected:</string>
    <string name="bikeMovement_default">...</string>
    <string name="bikeMovement_moving">Bike Moving!</string>
    <string name="bikeMovement_stationary">Bike Stationary!</string>
    <string name="lightMode_text">Light Mode</string>
    <string name="lightState_text">Light State</string>
    <string name="lightModeBlinking_text">Blinking</string>
    <string name="lightModeSolid_text">Solid</string>
    <string name="lightStateAuto_text">Auto</string>
    <string name="lightStateOn_text">ON</string>
    <string name="historyButton_text">Riding History</string>

    <string name="defaultBikeAddress">F2:D3:0A:CE:D1:38</string>
    <string name="unlockDialogTitle_text">Unlock Bike</string>
    <string name="unlockDialogLabel_text">Bike ID: </string>
    <string name="unlockDialogDefault_text">Enter Bike ID Here</string>
    <string name="unlockEnter_text">Unlock</string>
    <string name="unlockCancel_text">Cancel</string>
    <string name="unlockGoodToast_text">Unlocked Bike: </string>
    <string name="unlockBadToast_text">Please Enter a Valid bike ID</string>

    <string name="userPicture_URL">https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAALeAAAAJDU1NzMzM2JmLTgxZDMtNGEwYy1hODk1LTY5ZWNiMmEzZjY3MA.jpg</string>
    <string name="rideHistoryBanner_text">User icon</string>
    <string name="rideRowIcon_text">Ride trip icon</string>
    <string name="rideHistoryEntry_text">Enter new ride label</string>
    <string name="rideHistoryUpdate_text">Add Ride</string>
    <string name="badItemEntryToast_text">Unable to add ride</string>
    <string name="itemDeletedToast_text">Ride Deleted from History</string>

</resources>
