<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="edu.stanford.me202.lw_me202.ControlActivity">

    <Button
        android:id="@+id/unlockButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unlockButton_text"
        />

    <TextView
        android:id="@+id/connStatusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/connStatus_text" />

    <TextView
        android:id="@+id/bikeIDText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/bikeID_text" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <Switch
            android:id="@+id/lightModeSwitch"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/lightMode_text"/>

        <Switch
            android:id="@+id/lightStateSwitch"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/lightState_text"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/lightModeText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:gravity="end"
            android:hint="@string/lightModeSolid_text"/>

        <TextView
            android:id="@+id/lightStateText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:gravity="end"
            android:hint="@string/lightStateAuto_text"/>

    </LinearLayout>


    <Button
        android:id="@+id/historyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historyButton_text"
        />

</LinearLayout>