<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:layout_centerVertical="true"
    tools:context="edu.stanford.me202.lw_me202.LoginActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/loginNameLabel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/loginNameLabel_text" />

        <EditText
            android:id="@+id/loginNameEntry"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/loginNameDefault_text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/loginPWLabel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/loginPWLabel_text" />

        <EditText
            android:id="@+id/loginPWEntry"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
            <!-- android:hint="@string/loginPWDefault_text" -->
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/loginButton_text"
        />

</LinearLayout>